--- a/blog-post.html
+++ b/blog-post.html
@@ -251,7 +251,7 @@
               >
             </p>
             <p>
-              <a target="_blank" href="https://powerful-construction.com/terms"
+              <a target="_blank" href="https://powerful-construction.com/Terms"
                 >TERM AND CONDITIONS</a
               >
             </p>
