--- a/gutters.html
+++ b/gutters.html
@@ -26,31 +26,35 @@
         class="htc-header"
         style="background-color: rgba(239, 239, 239, 0.38)"
       >
-        <div class="htc__header__top bg__cat--1">
+      <header>
+        <!-- Top Navbar -->
+        <div class="top_nav">
           <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-                <ul class="heaher__top__left">
-                  <li><i class="fa fa-clock-o"></i>LIC:#13VH13026700</li>
-                  <li>
-                    <a href="tel: +1 (201)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>(201)903-5007
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href="tel: +1 (201)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>24/7 SUPPORT
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-                <div class="header__top__right"></div>
-              </div>
-            </div>
+            <ul class="list-inline info">
+              <li>
+                <p>
+                  <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                </p>
+              </li>
+              <li>
+                <a href="tel: +1 (201)903-5007" class="cs-phone"
+                  ><span class="fa fa-phone"></span>
+                  <strong> (201)903-5007</strong>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="mailto:powerfulconstruction10@gmail.com"
+                  class="cs-email"
+                >
+                  <span class="fa fa-envelope"></span>
+                  <strong> powerfulconstruction10@gmail.com</strong>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
+      </header>
         <div
           id="sticky-header-with-topbar"
           class="mainmenu__wrap sticky__header"
@@ -281,7 +285,7 @@
                   <p>
                     <a
                       target="_blank"
-                      href="https://powerful-construction.com/terms"
+                      href="https://powerful-construction.com/Terms"
                       >TERM AND CONDITIONS</a
                     >
                   </p>
