--- a/Terms.html
+++ b/Terms.html
@@ -22,84 +22,57 @@
   <body>
     <div class="wrapper">
       <div
-      id="header"
-      class="htc-header"
-      style="background-color: rgba(239, 239, 239, 0.38)"
-    >
-      <div class="htc__header__top bg__cat--1">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-              <ul class="heaher__top__left">
-                <li><i class="fa fa-clock-o"></i>LIC:#13VH13026700</li>
-                <li>
-                  <a href="tel: +1 (201)903-5007" class="cs-phone"
-                    ><span class="fa fa-phone"></span>(201)903-5007
-                  </a>
-                </li>
-
-                <li>
-                  <a href="tel: +1 (201)903-5007" class="cs-phone"
-                    ><span class="fa fa-phone"></span>24/7 SUPPORT
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-              <div class="header__top__right"></div>
-            </div>
+        id="header"
+        class="htc-header"
+        style="background-color: rgba(239, 239, 239, 0.38)"
+      >
+      <header>
+        <!-- Top Navbar -->
+        <div class="top_nav">
+          <div class="container">
+            <ul class="list-inline info">
+              <li>
+                <p>
+                  <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                </p>
+              </li>
+              <li>
+                <a href="tel: +1 (201)903-5007" class="cs-phone"
+                  ><span class="fa fa-phone"></span>
+                  <strong> (201)903-5007</strong>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="mailto:powerfulconstruction10@gmail.com"
+                  class="cs-email"
+                >
+                  <span class="fa fa-envelope"></span>
+                  <strong> powerfulconstruction10@gmail.com</strong>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div>
-      <div
-        id="sticky-header-with-topbar"
-        class="mainmenu__wrap sticky__header"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-md-2 col-sm-6 col-xs-7">
-              <div class="logo">
-                <a href="https://powerful-construction.com/">
-                  <img src="images/logo/11.png" alt="logo image" />
-                </a>
+      </header>
+        <div
+          id="sticky-header-with-topbar"
+          class="mainmenu__wrap sticky__header"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-md-2 col-sm-6 col-xs-7">
+                <div class="logo">
+                  <a href="https://powerful-construction.com/">
+                    <img src="images/logo/11.png" alt="logo image" />
+                  </a>
+                </div>
               </div>
-            </div>
 
-            <div class="col-md-7 col-sm-6 col-xs-5">
-              <nav class="main__menu__nav hidden-xs hidden-sm">
-                <ul class="main__menu">
-                  <li class="drop">
-                    <a href="https://powerful-construction.com/">HOME</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/about"
-                      >ABOUT</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/service"
-                      >SERVICES</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/Project"
-                      >PROJECTS</a
-                    >
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/faq">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="https://powerful-construction.com/contact"
-                      >CONTACT</a
-                    >
-                  </li>
-                </ul>
-              </nav>
-              <div class="mobile-menu clearfix visible-xs visible-sm">
-                <nav id="mobile_dropdown">
-                  <ul>
-                    <li>
+              <div class="col-md-7 col-sm-6 col-xs-5">
+                <nav class="main__menu__nav hidden-xs hidden-sm">
+                  <ul class="main__menu">
+                    <li class="drop">
                       <a href="https://powerful-construction.com/">HOME</a>
                     </li>
                     <li>
@@ -127,24 +100,55 @@
                     </li>
                   </ul>
                 </nav>
+                <div class="mobile-menu clearfix visible-xs visible-sm">
+                  <nav id="mobile_dropdown">
+                    <ul>
+                      <li>
+                        <a href="https://powerful-construction.com/">HOME</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/about"
+                          >ABOUT</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/service"
+                          >SERVICES</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/Project"
+                          >PROJECTS</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/faq">FAQ</a>
+                      </li>
+                      <li>
+                        <a href="https://powerful-construction.com/contact"
+                          >CONTACT</a
+                        >
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="col-md-3 hidden-xs main__menu__nav">
+                <a
+                  href="tel: +1 (201)903-5007"
+                  class="phone_text main__menu"
+                  style="color: rgb(203, 0, 0)"
+                >
+                  <span class="fa fa-phone"></span> (201)903-5007
+                </a>
               </div>
             </div>
-            <div class="col-md-3 hidden-xs main__menu__nav">
-              <a
-                href="tel: +1 (201)903-5007"
-                class="phone_text main__menu"
-                style="color: rgb(203, 0, 0)"
-              >
-                <span class="fa fa-phone"></span> (201)903-5007
-              </a>
-            </div>
+            <div class="mobile-menu-area"></div>
           </div>
-          <div class="mobile-menu-area"></div>
         </div>
-      </div>
 
-      <!-- End Mainmenu Area -->
-    </div>
+        <!-- End Mainmenu Area -->
+      </div>
       <!-- End Header Style -->
       <!-- Start Bradcaump area -->
       <div
@@ -397,7 +401,7 @@
                   <p>
                     <a
                       target="_blank"
-                      href="https://powerful-construction.com/terms"
+                      href="https://powerful-construction.com/Terms"
                       >TERM AND CONDITIONS</a
                     >
                   </p>
@@ -408,7 +412,7 @@
         </div>
       </footer>
     </div>
-  
+
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
     <!-- Bootstrap framework js -->
     <script src="js/bootstrap.min.js"></script>
