--- a/index.html
+++ b/index.html
@@ -36,36 +36,40 @@
     <!-- Body main wrapper start -->
 
     <div class="wrapper">
+      <header>
+        <!-- Top Navbar -->
+        <div class="top_nav">
+          <div class="container">
+            <ul class="list-inline info">
+              <li>
+                <p>
+                  <a><strong> POWEERFUL CONSTRUCTION LLC</strong></a>
+                </p>
+              </li>
+              <li>
+                <a href="tel: +1 (201)903-5007" class="cs-phone"
+                  ><span class="fa fa-phone"></span>
+                  <strong> (201)903-5007</strong>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="mailto:powerfulconstruction10@gmail.com"
+                  class="cs-email"
+                >
+                  <span class="fa fa-envelope"></span>
+                  <strong> powerfulconstruction10@gmail.com</strong>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
       <div
         id="header"
         class="htc-header"
         style="background-color: rgba(239, 239, 239, 0.38)"
       >
-        <div class="htc__header__top bg__cat--1">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-                <ul class="heaher__top__left">
-                  <li><i class="fa fa-clock-o"></i>LIC:#13VH13026700</li>
-                  <li>
-                    <a href="tel: +1 (201)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>(201)903-5007
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href="tel: +1 (201)903-5007" class="cs-phone"
-                      ><span class="fa fa-phone"></span>24/7 SUPPORT
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-                <div class="header__top__right"></div>
-              </div>
-            </div>
-          </div>
-        </div>
         <div
           id="sticky-header-with-topbar"
           class="mainmenu__wrap sticky__header"
@@ -244,6 +248,8 @@
                 <div class="about__inner">
                   <h2>OUR STORY</h2>
                   <p>
+                    License: <strong> LIC:#13VH13026700</strong>
+
                     In our story, each project is not just about bricks and
                     mortar, but about weaving tales of craftsmanship,
                     dedication, and the pursuit of architectural excellence
@@ -256,6 +262,8 @@
                 <div class="about__inner about__hober__info">
                   <h2>OUR STORY</h2>
                   <p>
+                    License: <strong> LIC:#13VH13026700</strong>
+
                     In our story, each project is not just about bricks and
                     mortar, but about weaving tales of craftsmanship,
                     dedication, and the pursuit of architectural excellence
@@ -275,6 +283,7 @@
                     In our story, each project is not just about bricks and
                     mortar, but about weaving tales of craftsmanship,
                     dedication, and the pursuit of architectural excellence
+                    License: <strong> LIC:#13VH13026700</strong>
                   </p>
 
                   <div class="about__icon">
@@ -287,7 +296,8 @@
                     Our company's About section encapsulates our unwavering
                     dedication to exceeding expectations, fostering
                     partnerships, and shaping the landscapes of tomorrow with
-                    integrity and ingenuity.
+                    integrity and ingenuity. License:
+                    <strong> LIC:#13VH13026700</strong>
                   </p>
 
                   <div class="about__icon">
@@ -301,10 +311,11 @@
                 <div class="about__inner">
                   <h2>OUR CERTIFICATE</h2>
                   <p>
-                    Our company construction certification stands as a testament
-                    to our unwavering commitment to quality, safety, and
-                    industry-leading standards, ensuring peace of mind for every
-                    client.
+                    Our company construction certification
+                    <strong> LIC:#13VH13026700</strong>
+                    stands as a testament to our unwavering commitment to
+                    quality, safety, and industry-leading standards, ensuring
+                    peace of mind for every client.
                   </p>
 
                   <div class="about__icon">
@@ -314,10 +325,11 @@
                 <div class="about__inner about__hober__info">
                   <h2>OUR CERTIFICATE</h2>
                   <p>
-                    Our company construction certification stands as a testament
-                    to our unwavering commitment to quality, safety, and
-                    industry-leading standards, ensuring peace of mind for every
-                    client.
+                    Our company construction certification
+                    <strong> LIC:#13VH13026700</strong>
+                    stands as a testament to our unwavering commitment to
+                    quality, safety, and industry-leading standards, ensuring
+                    peace of mind for every client.
                   </p>
                 </div>
                 <div class="about__icon">
@@ -389,7 +401,7 @@
                     <div class="service__hover">
                       <div class="service__action">
                         <a href="https://powerful-construction.com/siding"
-                        >GET INFO</a
+                          >GET INFO</a
                         >
                       </div>
                     </div>
@@ -418,7 +430,7 @@
                     <div class="service__hover">
                       <div class="service__action">
                         <a href="https://powerful-construction.com/gutters"
-                        >GET INFO</a
+                          >GET INFO</a
                         >
                       </div>
                     </div>
@@ -446,7 +458,7 @@
                     <div class="service__hover">
                       <div class="service__action">
                         <a href="https://powerful-construction.com/gutters"
-                        >GET INFO</a
+                          >GET INFO</a
                         >
                       </div>
                     </div>
@@ -576,7 +588,7 @@
                   <p>
                     Experience top-rated construction services with our team,
                     delivering unparalleled quality that exceeds industry
-                    standards.
+                    standards. License: <strong> LIC:#13VH13026700</strong>
                   </p>
                 </div>
               </div>
@@ -591,7 +603,7 @@
                   <p>
                     We prioritize quality craftsmanship without compromising on
                     cost-effectiveness, ensuring your project stays within
-                    budget.
+                    budget. License: <strong> LIC:#13VH13026700</strong>
                   </p>
                 </div>
               </div>
@@ -606,7 +618,7 @@
                   <p>
                     Trust us to deliver the best value for your investment,
                     consistently providing high-quality results at competitive
-                    rates.
+                    rates. License: <strong> LIC:#13VH13026700</strong>
                   </p>
                 </div>
               </div>
@@ -956,11 +968,8 @@
                       </div>
                       <p>Excellent workmanship, highly recommended</p>
                       <h2>
-                        <a href="https://powerful-construction.com/about"
-                          ></a
-                        >
+                        <a href="https://powerful-construction.com/about"></a>
                       </h2>
-                      
                     </div>
                   </div>
                   <!-- End Single Testimonial -->
@@ -975,9 +984,7 @@
                       </div>
                       <p>Top-notch service, exceeded all expectations!</p>
                       <h2>
-                        <a href="https://powerful-construction.com/about"
-                          ></a
-                        >
+                        <a href="https://powerful-construction.com/about"></a>
                       </h2>
                     </div>
                   </div>
@@ -996,9 +1003,7 @@
                         with their professionalism.
                       </p>
                       <h2>
-                        <a href="https://powerful-construction.com/about"
-                          ></a
-                        >
+                        <a href="https://powerful-construction.com/about"></a>
                       </h2>
                     </div>
                   </div>
@@ -1071,7 +1076,11 @@
                     <img src="images/blog/blog-img/1.jpg" alt="blog image" />
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
-                        <li><a href="https://powerful-construction.com/blog-post">By : POWERFUL CONSTRUCTION LLC</a></li>
+                        <li>
+                          <a href="https://powerful-construction.com/blog-post"
+                            >By : POWERFUL CONSTRUCTION LLC</a
+                          >
+                        </li>
                         <li>20 MARCH</li>
                       </ul>
                     </div>
@@ -1094,7 +1103,11 @@
                     <img src="images/lst-project-2/10.jpg" alt="blog image" />
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
-                        <li><a href="https://powerful-construction.com/blog-post">By : POWERFUL CONSTRUCTION LLC</a></li>
+                        <li>
+                          <a href="https://powerful-construction.com/blog-post"
+                            >By : POWERFUL CONSTRUCTION LLC</a
+                          >
+                        </li>
                         <li>20 MARCH</li>
                       </ul>
                     </div>
@@ -1118,7 +1131,11 @@
                     <img src="images/lst-project-3/4.jpg" alt="blog image" />
                     <div class="blog__hover__info">
                       <ul class="blog__meta">
-                        <li><a href="https://powerful-construction.com/blog-post">By : POWERFUL CONSTRUCTION LLC</a></li>
+                        <li>
+                          <a href="https://powerful-construction.com/blog-post"
+                            >By : POWERFUL CONSTRUCTION LLC</a
+                          >
+                        </li>
                         <li>20 MARCH</li>
                       </ul>
                     </div>
@@ -1419,7 +1436,8 @@
                             >
                           </li>
                           <li>
-                            <a href="https://powerful-construction.com/construction"
+                            <a
+                              href="https://powerful-construction.com/construction"
                               >Construction</a
                             >
                           </li>
@@ -1452,7 +1470,7 @@
                   <p>
                     <a
                       target="_blank"
-                      href="https://powerful-construction.com/terms"
+                      href="https://powerful-construction.com/Terms"
                       >TERM AND CONDITIONS</a
                     >
                   </p>
